[package]
name = "otx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["cookies","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2"}
tokio-postgres = {version="0.7"}
async-nats = "0.10.1"
# otx = { path = "../my_lib" }
